renamed:    src/main/webapp/WEB-INF/dispatcher-servlet.xml -> dispatcher-servlet.xml 	modified:   pom.xml 	new file:   src/main/java/com/dasanjos/tickets/Application.java 	new file:   src/main/java/com/dasanjos/tickets/BeanConfig.java 	new file:   src/main/java/com/dasanjos/tickets/MvcConfiguration.java 	new file:   src/main/java/com/dasanjos/tickets/SecurityConfig.java 	modified:   src/main/java/com/dasanjos/tickets/dao/TicketDAOImpl.java 	new file:   src/main/java/com/dasanjos/tickets/web/HomeController.java 	new file:   src/main/resources/application.yml 	renamed:    src/main/webapp/img/bottom_gradient.png -> src/main/webapp/WEB-INF/img/bottom_gradient.png 	renamed:    src/main/webapp/img/navigation_blue.png -> src/main/webapp/WEB-INF/img/navigation_blue.png 	renamed:    src/main/webapp/img/skype_logo.png -> src/main/webapp/WEB-INF/img/skype_logo.png 	renamed:    src/main/webapp/img/style.css -> src/main/webapp/WEB-INF/img/style.css 	renamed:    src/main/webapp/img/top_gradient.png -> src/main/webapp/WEB-INF/img/top_gradient.png 	renamed:    src/main/webapp/index.jsp -> src/main/webapp/WEB-INF/jsp/index.jsp 	renamed:    src/main/webapp/WEB-INF/web.xml -> web.xml

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 	<packaging>war</packaging>
 	<version>1.0-SNAPSHOT</version>
 	<name>Ticketz Webapp</name>
-
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>1.4.2.RELEASE</version>
+    </parent>
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
@@ -14,6 +18,32 @@
 			<version>3.8.1</version>
 
 		</dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-jasper</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-security -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
@@ -52,78 +82,78 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-expression</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-beans</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aop</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>3.0.0.RELEASE</version>
+			<version>4.3.4.RELEASE</version>
 		</dependency>
-		<dependency>
+	<!--	<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>3.3.0.GA</version>
+            <version>5.2.4.Final</version>
 		</dependency>
-		<dependency>
+        <dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-annotations</artifactId>
-			<version>3.3.0.ga</version>
+            <version>3.3.0.ga</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-commons-annotations</artifactId>
-			<version>3.3.0.ga</version>
-		</dependency>
+            <version>3.3.0.ga</version>
+		</dependency>-->
 	<!--	<dependency>
 			<groupId>hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
@@ -144,7 +174,9 @@
     </dependencies>
 	<build>
 		<finalName>ticketz</finalName>
-		<plugins>
+        <defaultGoal>package</defaultGoal>
+
+        <plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -154,6 +186,10 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
 		</plugins>
 	</build>
 </project>
