new file:   build.gradle 	new file:   build/resources/main/application.yml 	new file:   build/resources/main/messages.properties 	new file:   build/resources/main/static/img/bottom_gradient.png 	new file:   build/resources/main/static/img/navigation_blue.png 	new file:   build/resources/main/static/img/skype_logo.png 	new file:   build/resources/main/static/img/style.css 	new file:   build/resources/main/static/img/top_gradient.png 	new file:   build/tmp/war/MANIFEST.MF 	new file:   databases/create_databases.sql 	new file:   databases/db.gradle 	new file:   databases/ticketdb-database/build.gradle 	new file:   databases/ticketdb-database/src/main/resources/db/migration/V1__create_ticket.sql 	new file:   databases/ticketdb-database/src/main/resources/db/migration/V2__insert_ticket.sql 	new file:   gradle/wrapper/gradle-wrapper.properties 	new file:   gradlew 	new file:   gradlew.bat 	new file:   java.gradle 	modified:   manifest.yml 	renamed:    pom.xml -> po_m.xml 	new file:   settings.gradle 	modified:   src/main/resources/application.yml

--- a/manifest.yml
+++ b/manifest.yml
@@ -1,3 +1,7 @@
 applications:
-- name: java-ticket-system
-  path: target/ticketz.war
+- name: ticketz-app
+  path: build/libs/ticketz-1.0-SNAPSHOT.war
+  services:
+  - ticketz-sql
+  routes:
+     - route: ticketz-app-ae1.apps.cumuluslabs.io
